--- a/xlive/Project_Cartographer.vcxproj
+++ b/xlive/Project_Cartographer.vcxproj
@@ -454,6 +454,15 @@
     <ClInclude Include="3rdparty\spdlog\include\spdlog\version.h" />
     <ClInclude Include="3rdparty\tinyxml\tinyxml2.h" />
     <ClInclude Include="Blam\Cache\DataTypes\BlamTag.h" />
+    <ClInclude Include="Blam\Cache\TagGroups\ai_mission_dialogue_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\antenna_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\biped_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\camera_track_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\item_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\object_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\projectile_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\unit_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\weapon_definition.hpp" />
     <ClInclude Include="Blam\Cache\Tags\itmc.h" />
     <ClInclude Include="Blam\Cache\Tags\scnr.h" />
     <ClInclude Include="Blam\Cache\Tags\tag_base.h" />
@@ -491,7 +500,6 @@
     <ClInclude Include="Blam\Cache\DataTypes\StringID.h" />
     <ClInclude Include="Blam\Cache\DataTypes\Strings.h" />
     <ClInclude Include="Blam\Cache\DataTypes\TagRef.h" />
-    <ClInclude Include="Blam\Cache\TagBlocks.hpp" />
     <ClInclude Include="Blam\Cache\TagBlocks\char.h" />
     <ClInclude Include="Blam\Cache\TagBlocks\TagBlock.h" />
     <ClInclude Include="Blam\Cache\TagGroups.hpp" />
