Add more object Tags

--- a/xlive/Project_Cartographer.vcxproj
+++ b/xlive/Project_Cartographer.vcxproj
@@ -459,10 +459,18 @@
     <ClInclude Include="Blam\Cache\TagGroups\biped_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\camera_track_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\crate_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\creature_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\device_control_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\device_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\device_light_fixture_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\device_machine_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\equipment_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\garbage_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\item_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\object_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\projectile_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\unit_definition.hpp" />
+    <ClInclude Include="Blam\Cache\TagGroups\vehicle_definition.hpp" />
     <ClInclude Include="Blam\Cache\TagGroups\weapon_definition.hpp" />
     <ClInclude Include="Blam\Cache\Tags\itmc.h" />
     <ClInclude Include="Blam\Cache\Tags\scnr.h" />
